syntax = "proto3";
option cc_enable_arenas = true;

package Ydb.BSConfig;

option java_package = "com.yandex.ydb.bsconfig.proto";
option java_outer_classname = "BSConfigProtos";
option java_multiple_files = true;

import "ydb/public/api/protos/ydb_operation.proto";

//
// BSConfig API.
//

message ReplaceStorageConfigRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    // cluster yaml config
    optional string main_config = 2;

    // dedicated storage yaml config (when dual-config mode is enabled)
    optional string storage_config = 3;

    // if filled, can turn on or off dedicated section of YAML config
    optional bool switch_dedicated_storage_section = 4;

    // if true, then user expects system to work in dual-config mode
    bool dedicated_config_mode = 5;

    bool dry_run = 7;

    bool allow_unknown_fields = 8;
    bool allow_absent_database = 9;
    // next two together allow to mimic DynConfigService.SetConfig behavior
    bool allow_incorrect_version = 10;
    bool allow_incorrect_cluster = 11;
}

message ReplaceStorageConfigResponse {
    Ydb.Operations.Operation operation = 1;
}

message ReplaceStorageConfigResult {
}

message FetchStorageConfigRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    bool dedicated_storage_section = 2;
    bool dedicated_cluster_section = 3;
}

message FetchStorageConfigResponse {
    Ydb.Operations.Operation operation = 1;
}

message FetchStorageConfigResult {
    optional string main_config = 1;
    optional string storage_config = 2;
}

message BootstrapClusterRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string self_assembly_uuid = 2;
}

message BootstrapClusterResponse {
    Ydb.Operations.Operation operation = 1;
}
